src/objects/Invoice_Exclude__c.object
<CustomObject>
    <description>List of invoices that we don&apos;t want to send to client via email</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices Exclude</relationshipLabel>
        <relationshipName>Invoices_Exclude</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice Exclude</label>
    <nameField>
        <label>Invoice Exclude Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices Exclude</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>